player_update_result.txt
[eval]:36
const toRemove = [...currentNames].filter(n => \!excelNames.has(n));
                                               ^
Expected unicode escape

SyntaxError: Invalid or unexpected token
    at makeContextifyScript (node:internal/vm:194:14)
    at compileScript (node:internal/process/execution:388:10)
    at evalTypeScript (node:internal/process/execution:260:22)
    at node:internal/main/eval_string:71:3

Node.js v24.12.0
